# proj_bbf-palmsgig---social-media-task-marketplace

./: .arvad_session_report.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_COMPLETE.md  PAYMENT_SERVICE_CHECKLIST.md  PAYMENT_SERVICE_FILES.md  PAYMENT_SERVICE_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  next.config.js  package.json  pyproject.toml  railway.json  start.sh  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  security.yml
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_add_session_tracking.py  003_add_oauth_tokens.py  004_add_mfa_fields.py  005_create_task_management_tables.py  006_add_task_search_indexes.py  007_create_social_accounts_table.py  008_create_payment_service_tables.py  009_add_escrow_balance.py
app/auth/register/: page.tsx
app/dashboard/: page.tsx
app/dashboard/create-task/: page.tsx
app/dashboard/profile/: page.tsx
app/dashboard/wallet/: page.tsx
arvad_task_files/: 000_brand_guide.md  001_create_.gitignore.md  002_create_README.md.md  003_create_pyproject.toml.md  004_create_.pre-commit-config.yaml.md  005_create_src_init_.py.md  006_create_src_api_gateway_init_.py.md  007_create_src_user_management_init_.py.md  008_create_src_shared_init_.py.md  009_create_tests_init_.py.md
components/auth/: login-form.tsx
components/dashboard/: activity-feed.tsx  overview-card.tsx  sidebar.tsx
components/profile/: profile-header.tsx  settings-form.tsx  social-accounts.tsx
components/task-creation/: budget-calculator.tsx  instruction-editor.tsx  platform-selection.tsx
components/task-details/: creator-profile.tsx  requirements-checklist.tsx
components/task-discovery/: task-card.tsx
components/ui/: card.tsx  filter-sidebar.tsx  image-upload.tsx  input.tsx  modal.tsx  skeleton.tsx  table.tsx
components/wallet/: transaction-table.tsx
contexts/: auth-context.tsx  theme-context.tsx
frontend/: .gitignore  eslint.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/auth/: register-form.tsx
frontend/components/dashboard/: sidebar.tsx
frontend/components/onboarding/: welcome-modal.tsx
frontend/components/profile/: account-statistics.tsx  edit-profile-form.tsx  profile-header.tsx
frontend/components/task-creation/: targeting-options.tsx  task-type-config.tsx
frontend/components/task-details/: proof-submission.tsx  status-tracker.tsx  task-header.tsx
frontend/components/task-discovery/: sort-options.tsx  view-toggle.tsx
frontend/components/ui/: button.tsx  card.tsx  filter-sidebar.tsx  image-cropper.tsx  input.tsx  logo.tsx  progress.tsx  rich-text-editor.tsx  search-input.tsx
frontend/components/wallet/: balance-card.tsx  deposit-modal.tsx  transaction-filters.tsx  withdrawal-modal.tsx
frontend/hooks/: use-auth.ts  use-dashboard.ts  use-onboarding.ts  use-profile.ts  use-task-details.ts  use-task-discovery.ts  use-task-wizard.ts  use-theme.ts  use-wallet.ts
frontend/lib/api/: client.ts  dashboard.ts  profile.ts  wallet.ts
frontend/lib/constants/: brand.ts
frontend/lib/react-query/: client.ts
frontend/lib/types/: api.ts
frontend/lib/validations/: auth.ts  task.ts
hooks/: use-infinite-scroll.ts
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml
lib/api/: profile.ts  tasks.ts
lib/validations/: profile.ts
scripts/: deploy.sh  docker-entrypoint.sh
services/admin-dashboard/: railway.json
services/api-gateway/: railway.json
services/payment-wallet/: railway.json
services/social-media-integration/: railway.json
services/task-management/: Dockerfile  railway.json
services/user-management/: railway.json
src/: __init__.py
src/admin_dashboard/: __init__.py  main.py
src/api_gateway/: dependencies.py  exceptions.py  main.py
src/api_gateway/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/api_gateway/routers/: __init__.py  health.py  v1.py
src/payment_service/: __init__.py  main.py
src/payment_service/events/: __init__.py  handlers.py
src/payment_service/gateways/: __init__.py  base.py
src/payment_service/models/: __init__.py  ledger_entry.py  transaction.py  wallet.py
src/payment_service/routers/: __init__.py  escrow.py  paypal.py  stripe.py  transaction.py  wallet.py
src/payment_service/schemas/: __init__.py  escrow.py  paypal.py  stripe.py  transaction.py  wallet.py
src/payment_service/services/: __init__.py  escrow_service.py  ledger_service.py  transaction_service.py  wallet_service.py
src/payment_service/tests/: __init__.py  test_escrow.py  test_escrow_service.py  test_models.py  test_payment_events.py  test_routers.py  test_services.py
src/shared/: config.py  database.py  redis.py
src/shared/models/: __init__.py  auth.py  base.py  user.py
src/social_media/: __init__.py  main.py
src/social_media/enums/: __init__.py  platform_enums.py
src/social_media/models/: __init__.py  social_account.py
src/social_media/routers/: __init__.py  social_accounts.py
src/social_media/schemas/: __init__.py  social_account.py
src/social_media/services/: __init__.py  account_service.py  oauth_service.py
src/social_media/tests/: __init__.py  test_account_service.py  test_oauth_service.py  test_platform_clients.py  test_social_accounts_router.py
src/task_management/: __init__.py  main.py
src/task_management/config/: elasticsearch.py
src/task_management/enums/: __init__.py  task_enums.py
src/task_management/models/: __init__.py  task.py  (+2 more)
tests/: test_api_gateway.py  test_config.py  test_database.py  test_jwt_auth.py  test_jwt_service.py  test_middleware.py  test_oauth.py  test_oauth_providers.py  test_user_registration.py  test_verification_service.py
(+84 files in other folders)
